[project]
name = "gemini-programming-team"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "flask-socketio",
    "requests",
    "beautifulsoup4",
    "gunicorn",
    "flask-cors",
    "wasmtime",
    "PyGithub",
    "JPype1",
    "trimesh",
    "lxml",
    "networkx",
    "ffmpeg-python",
    "moviepy",
    "trimesh",
    "shapely",
    "matplotlib"
]

[tool.vercel]
# Vercelに「main.py の中にある app 変数が司令塔だ！」と明確に教える
entrypoint = "main.py:app"
